--- a/styles/main.css
+++ b/styles/main.css
@@ -113,6 +113,6 @@ inputP {
   display: none !important;
 }
 
-.tab-content {
+.style-config-settings .tab-content {
   display: block !important;
 }
